recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:3: error: not found: value lenght
  forward(lenght)
          ^Tree:9: error: not found: value lenght
  backward(lenght)
           ^