recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps==0)return
  forward(lenght)
  right(angle)
  tree(steps-1:Int, length*shrink:Double, angle:Double, shrink:Double)
  left(angle*2)
  tree(steps-1:Int, length*shrink:Double, angle:Double, shrink:Double)
  right(angle)
  backward(lenght)
  return
  
}